--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ LOG_SOURCE_LOCATION_ENABLE: false
 # Database
 DB_HOST: "localhost"
 DB_PORT: 5432
-DB_NAME: "dpay"
+DB_NAME: "crewX"
 DB_USER: "postgres"
 DB_PASSWORD: "postgres"
 DB_MAX_POOL_SIZE: 5
