--- a/application.yml
+++ b/application.yml
@@ -125,3 +125,6 @@ MIDTRANS_BASE_URL: ""
 PARENT_MERCHANTS: [""]
 DB_MAX_IDLE_CONNECTIONS: 2
 REPLICA_DB_MAX_IDLE_CONNECTIONS: 2
+
+
+PYTHON_SERVER_BASE_URL: "http://192.168.2.15:5000"
