--- a/application.yml
+++ b/application.yml
@@ -28,10 +28,6 @@ REDIS_ADDR: "localhost:6379"
 REDIS_PASSWORD: ""
 REDIS_DB: 0
 
-
-AWS_REGION: ""
-AWS_ACCESS_KEY_ID: ""
-AWS_SECRET_ACCESS_KEY: ""
 NOTIFICATIONS_EMAIL_ID: ""
 NOTIFICATION_FAILURE_TOPIC: ""
 
@@ -128,3 +124,7 @@ REPLICA_DB_MAX_IDLE_CONNECTIONS: 2
 
 
 PYTHON_SERVER_BASE_URL: "http://192.168.2.15:5000"
+AWS_REGION: "ap-southeast-1"
+AWS_ACCESS_KEY_ID: "ASIAV3LJZRBIGO6ELGM7"
+AWS_SECRET_ACCESS_KEY: "IVZD2W/EJtIpZmSpbZyhL2fhVx1kATKtWqEkpG6W"
+AWS_GENERATED_ASSETS_BUCKET: "taleteller-generated-assets"
