Api/post story scene (#2)

--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 # App
 ENVIRONMENT: "development"
 SAMPLE: "merchant.local"
-APP_NAME: "service"
+APP_NAME: "scene"
 APP_PORT: 8001
 
 
@@ -28,10 +28,6 @@ REDIS_ADDR: "localhost:6379"
 REDIS_PASSWORD: ""
 REDIS_DB: 0
 
-
-AWS_REGION: ""
-AWS_ACCESS_KEY_ID: ""
-AWS_SECRET_ACCESS_KEY: ""
 NOTIFICATIONS_EMAIL_ID: ""
 NOTIFICATION_FAILURE_TOPIC: ""
 
@@ -87,7 +83,7 @@ OY_BASE_URL: ""
 
 # Replica Database
 REPLICA_DB_HOST: postgres_postgres
-REPLICA_DB_PORT: 5432
+REPLICA_DB_PORT: 5433
 REPLICA_DB_NAME: staging_dpay_server
 REPLICA_DB_USER: postgres
 REPLICA_DB_PASSWORD: postgres
@@ -125,3 +121,10 @@ MIDTRANS_BASE_URL: ""
 PARENT_MERCHANTS: [""]
 DB_MAX_IDLE_CONNECTIONS: 2
 REPLICA_DB_MAX_IDLE_CONNECTIONS: 2
+
+
+PYTHON_SERVER_BASE_URL: "http://192.168.2.15:5000"
+AWS_REGION: "ap-southeast-1"
+AWS_ACCESS_KEY_ID: "ASIAV3LJZRBIGO6ELGM7"
+AWS_SECRET_ACCESS_KEY: "IVZD2W/EJtIpZmSpbZyhL2fhVx1kATKtWqEkpG6W"
+AWS_GENERATED_ASSETS_BUCKET: "taleteller-generated-assets"
